# QMLOpenAI

./: CMakeLists.txt  Resources.qrc  main.cpp  main.qml
Src/: main.cpp
Src/API/: manager.cpp  manager.h
Src/Core/CommandLine/: commandlinemode.cpp  commandlinemode.h  commandparse.cpp
Src/Core/CommandParse/: commandparse.cpp  commandparse.h
Src/Core/Config/: config.cpp  config.h  config.h.in
Src/Core/Logger/: logger.cpp  logger.h
Src/Core/Settings/: settings.cpp  settings.h
Src/Logger/: logger.cpp  logger.h
Tests/: CMakeLists.txt  TestMain.cpp
